<resources>
    <string name="app_name">SafeRide</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="about_fragment">
        "SafeRide\n"
        "Created by Zeina Amhaz and Emily Masten\n\n"

        "SafeRide is an application meant to make calling Safe Ride on campus easier and quicker."
        "We are planning to continue working on this app this summer and next year, hoping to "
        "have it done and ready to be launched by the end of next year. For our final project, "
        "we implemented the main basics and important background parts.\n\n"

        "Check the Help page for how the app works. If there is anything that we can do differently,"
        " more efficiently, or just better, we would love your opinion and input!"
    </string>
    <string name="help_fragment">
        "How to use SafeRide\n\n"

        "User:\n"
        "1. Press \"Set PickUp\" to request a driver to come pick you up.\n"
        "2. Set your current location, destination, number of people, and whether of not this is "
        "an emergency.\n"
        "3. Press \"Messages\" to see get notifications from driver (ie whether or not the driver "
        "has accepted the request and has arrived).\n\n"

        "Driver:\n"
        "1. Press \"Refresh\" to see if a request is waiting for you.\n"
        "2. When there is a new request, a dialog fragment pops up notifying you of the person "
        "requesting a drive, their location, their destination, number of people, and whether or "
        "not it\'s an emergency.\n"
        "3. When you have arrived at their location, press \"Arriving\" to notify the user.\n"
        "4. When you have dropped the person off, press \"Dropped Off\" to go back to refreshing "
        "for new requests."
    </string>
    <string name="btn_arriving">Arriving</string>
    <string name="btn_droppedOff">Dropped Off</string>
    <string name="btn_refresh">Refresh</string>
    <string name="message_driverArrived">Driver has arrived</string>
    <string name="message_driveEnRoute">Request accepted: Driver enRoute</string>
    <string name="emergency">EMERGENCY</string>
    <string name="driver_pickUpRequest">Pick Up Request</string>
    <string name="notRegisteredDriver">You are not a registered driver</string>
    <string name="user_pickUpRequest">Set Pick Up</string>
    <string name="setNumPeople">Set Number of People</string>
    <string name="messageSent">Message sent</string>
    <string name="password">Password</string>
    <string name="conf_password">Confirm Password</string>
    <string name="amherst_email">Enter Amherst Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="driver_conf">Are you a driver?</string>
    <string name="login">Login</string>
    <string name="your_location">Your Location:</string>
    <string name="destination">Destination</string>
    <string name="numPeople">Number of People</string>
    <string name="is_emergency">Emergency?</string>
    <string name="messages">Messages</string>
    <string name="set_pickup">Set Pickup</string>
    <string name="location">Location</string>
    <string name="name">Name</string>
    <string name="refresh">Refresh</string>
    <string name="safe_ride">Safe Ride</string>


    <string-array name="places_array">
        <item>Appleton</item>
        <item>Chapman</item>
        <item>Charles Drew</item>
        <item>Charles Pratt</item>
        <item>Cohan</item>
        <item>Garman</item>
        <item>Greenway </item>
        <item>The Hill</item>
        <item>Humphries</item>
        <item>James</item>
        <item>Jenkins</item>
        <item>King and Wieland</item>
        <item>Leland</item>
        <item>Lipton</item>
        <item>Moore</item>
        <item>Morris Pratt</item>
        <item>Morrow</item>
        <item>Newport</item>
        <item>North</item>
        <item>Porter</item>
        <item>Seligman</item>
        <item>South</item>
        <item>Stearns</item>
        <item>Taplin</item>
        <item>The Triangle</item>
        <item>Valentine</item>
        <item>Williston</item>
    </string-array>


    <style name="ButtonText">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#ffffff</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textSize">20dp</item>
        <item name="android:textStyle">bold</item>
        <item name="android:shadowColor">#000000</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">2</item>
    </style>
</resources>
