<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/driver_tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name" />

    <TextView
        android:id="@+id/driver_tvLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location" />

    <TextView
        android:id="@+id/driver_tvDestination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/destination" />

    <TextView
        android:id="@+id/driver_tvNumPeople"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numPeople" />

    <TextView
        android:id="@+id/driver_tvEmergency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />


</LinearLayout>