<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="hu.ait.android.saferide.LoginActivity">


    <EditText
        android:id="@+id/login_etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/login_etEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/login_etPassword"
        android:layout_centerHorizontal="true"
        android:inputType="textEmailAddress"
        android:hint="@string/amherst_email" />

    <TextView
        android:id="@+id/login_tvText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/login_etEmail"
        android:layout_centerHorizontal="true"
        android:text="@string/login"
        android:textSize="50dp" />

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@+id/login_etPassword"
        android:layout_centerInParent="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/login_btnSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up" />

        <Button
            android:id="@+id/login_btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login" />
    </LinearLayout>


</RelativeLayout>
